--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,36 @@
 {
   "manifest_version": 3,
-  "name": "Clean ChatGPT Tracking Params",
-  "version": "1.0",
-  "description": "Removes utm_source=chatgpt.com from URLs.",
+  "name": "Detrack GPT",
+  "version": "2.0",
+  "description": "Removes utm_source=chatgpt.com from URLs and clipboard.",
 
   "icons": {
     "128": "128.png"
   },
 
-  "permissions": [ "declarativeNetRequest" ],
+  "permissions": [ 
+    "declarativeNetRequest",
+    "storage",
+    "webRequest"
+  ],
   "host_permissions": [ "<all_urls>" ],
+
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "128.png"
+  },
+
+  "background": {
+    "service_worker": "background.js"
+  },
+
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_end"
+    }
+  ],
 
   "declarative_net_request": {
     "rule_resources": [
